Fontawesome icons align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,6 @@ label {
   padding: 15px 0;
 }
 
-.fa-user {
-  vertical-align: text-bottom;
-}
-
 .buy-now {
   padding-bottom: 50px;
 }
